update : make scrap basic and waiting boss's reply

--- a/facebook_auto/package.json
+++ b/facebook_auto/package.json
@@ -15,6 +15,8 @@
   "author": "Takuya",
   "license": "ISC",
   "dependencies": {
-    "puppeteer": "^22.12.0"
+    "puppeteer": "^22.12.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
 }
